add whosay whos turn